src/test/ui/parser/duplicate-visibility.stderr
error: expected one of `(`, `async`, `const`, `extern`, `fn`, `static`, `type`, or `unsafe`, found keyword `pub`
  --> $DIR/duplicate-visibility.rs:3:9
   |
LL |     pub pub fn foo();
   |         ^^^ expected one of 8 possible tokens

error: aborting due to previous error

